--- a/ICA/5/ica5CSS/ica5styles.css
+++ b/ICA/5/ica5CSS/ica5styles.css
@@ -40,16 +40,18 @@ h1 {
 
 /* Your CSS below here */
 article {
-  background-image: linear-gradient(rgb(0,0,0,.5), rgb(0,0,0,0)) top/200px no-repeat
-   url("./ica5IMG/ica5TopImage.png") top contain no-repeat
-   linear-gradient(rgb(0,0,0,0), rgb(0,0,0,.5)) bottom/200px no-repeat
-   url("./ica5IMG/ica5BottomImage.png") bottom contain no-repeat, white;
-  border-top: red 1mm;
-  /* linear-gradient(rgb(0,0,0,0), rgb(0,0,0,0.5) */
-  border-bottom: red 1mm;
+  background: 
+   /* another method: linear-gradient(to bottom, rgb(0,0,0,0) 80%, rgb(0,0,0,0.25)) top,
+   linear-gradient(to top, rgb(0,0,0,0) 80%, rgb(0,0,0,0.25)) bottom,*/
+   linear-gradient(rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 16%, rgba(0,0,0,0) 84%, rgba(0,0,0,0.35)),
+   url(../ica5IMG/ica5TopImage.png) top no-repeat,
+   url(../ica5IMG/ica5BottomImage.png) bottom no-repeat,
+   white;
+  border-top: 1mm solid crimson;
+  border-bottom: 1mm solid crimson;
 }
 
 h1 {
-  background-image: url("ica5IMG/ica5Logo.png");
-  filter: drop-shadow(3px black);
+  background-image: url(../ica5IMG/ica5Logo.png);
+  filter: drop-shadow(5px 5px 3px black);
 }
