--- a/ICA/5/ica5CSS/ica5styles.css
+++ b/ICA/5/ica5CSS/ica5styles.css
@@ -44,7 +44,7 @@ article {
    /* another method: linear-gradient(to bottom, rgb(0,0,0,0) 80%, rgb(0,0,0,0.25)) top,
    linear-gradient(to top, rgb(0,0,0,0) 80%, rgb(0,0,0,0.25)) bottom,*/
    linear-gradient(rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 16%, rgba(0,0,0,0) 84%, rgba(0,0,0,0.35)),
-   url("../ica5IMG/ica5TopImage.png") top no-repeat,
+   url(../ica5IMG/ica5TopImage.png) top no-repeat,
    url(../ica5IMG/ica5BottomImage.png) bottom no-repeat,
    white;
   border-top: 1mm solid crimson;
