--- a/css/styles.css
+++ b/css/styles.css
@@ -75,10 +75,12 @@ p {
     border: none;
     border-radius: 15px;   
     padding: 15px 32px; 
+    text-decoration: none;
 }
 
 .button1:hover {
     background: #F3B167;
+    text-decoration: none;
 }
 
 .button1:active {
