--- a/css/styles.css
+++ b/css/styles.css
@@ -91,3 +91,32 @@ ul {
     color: #0A152F;
     list-style-type: circle;
 }
+
+#navbar {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        padding: 20px;
+        background-color: rgb(241, 241, 241);
+        color: gray;
+        position: sticky;
+        top: 0;
+        list-style-type: none;
+}
+
+.me{
+    max-width: 400px;
+}
+@media screen and (max-width:700px) {
+    .grid{
+    display: default;
+    }
+}
+
+@media screen and (min-width:701px){
+    .grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 5px;
+}
+}
