--- a/css/styles.css
+++ b/css/styles.css
@@ -91,32 +91,61 @@ ul {
     color: #0A152F;
     list-style-type: circle;
 }
-
-#navbar {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        padding: 20px;
-        background-color: rgb(241, 241, 241);
-        color: gray;
-        position: sticky;
-        top: 0;
-        list-style-type: none;
+#navbarlinks {
+    list-style-type: none;
 }
 
+#navbarlinks a{
+    color: gray;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+#navbarlinks a:hover{
+    color: #F3B167;
+}
 .me{
     max-width: 400px;
 }
-@media screen and (max-width:700px) {
-    .grid{
-    display: default;
+.grid{
+        display:grid;
+        grid-template-columns: 1fr;
     }
+nav {
+        padding: 10px;
+        background-color: rgb(241, 241, 241);
+        position: sticky;
+        top: 0;
+        width: 100%;
 }
 
-@media screen and (min-width:701px){
+.checkbtn {
+    font-size: 30px;
+    color: gray;
+    float:right;
+    margin-right: 40px;
+}
+#check {
+    display:none;
+}
+.checkbtn {
+    display:block;
+}
+
+@media only screen and (min-width:750px){
     .grid {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 5px;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 20px;
+    }
+    #navbarlinks {
+        float: right;
+        margin-right: 20px;
+    }
+    #navbarlinks li {
+        display: inline-block;
+        margin: 0 5px;
+    }
+    
 }
-}
+
