--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
     font-style: normal;
 }
 
+
+/* |General Styling|*/
 h1 {
     font-weight: 700;
     font-size: 48px;
@@ -69,7 +71,7 @@ h4, h5, h6 {
     background-color: #0A152F;
     border: none;
     border-radius: 15px;   
-    padding: 15px 32px; 
+    padding: 10px 25px; 
     text-decoration: none;
 }
 
@@ -92,6 +94,9 @@ ul {
     list-style-type: circle;
 }
 
+/*|||Mobile Styling|||*/
+
+/*|Nav Bar|*/
 nav {
     background-color: #0A152F;
     padding: 5px;
@@ -99,11 +104,26 @@ nav {
     top: 0;
     width: 100%;
     height: 50px;
+    z-index:3;
 }
 
+#navbarlinks {
+    list-style-type: none;
+    position:fixed;
+    width:100%;
+    height:160px;
+    background:#8E3529;
+    top: 50px;
+    right: -100%;
+    text-align: center;
+    transition: all .5s;
+    z-index:1;
+}
 
 #navbarlinks a{
-    color: gray;
+    color: #FEE0C4;
+    font-size: 20px;
+    line-height: 40px;
     text-decoration: none;
     text-transform: uppercase;
 }
@@ -112,42 +132,34 @@ nav {
     color: #F3B167;
 }
 
-.grid{
-        display:grid;
-        grid-template-columns: 1fr;
-    }
-
+.logo {
+    padding: 0 20px;
+}
 .checkbtn {
-    font-size: 30px;
+    font-size: 40px;
     color: #FEE0C4;
     float:right;
     margin-right: 40px;
     display:block;
+    cursor:pointer;
 }
 #check {
     display:none;
 }
 
-#navbarlinks {
-    list-style-type: none;
-}
-
-#check:not(:checked) ~ #navbarlinks li {
+#check:not(:checked) ~ #navbarlinks {
     display:none;
 }
 
-#check:checked ~ #navbarlinks li {
-    margin: 20px 30px;
-    display: block;
-    text-align:right;
-    top: 70px;
-    background: white;
-    transition: all .5s;
-    position:fixed;
+#check:checked ~ #navbarlinks {
     right: 0;
 }
 
-
+/*|Index Styling|*/
+.grid{
+    display:grid;
+    grid-template-columns: 1fr;
+}
 .container{
     grid-template-rows: 1fr 1fr 1fr;
     background: gray;
@@ -155,7 +167,7 @@ nav {
 }
 
 .col{
-    height: 30em;
+    height: 25em;
     box-sizing: border-box;
     padding: .5em;
     position: relative;
@@ -174,7 +186,11 @@ nav {
     text-align: center;
 }
 .col img {
-    width: 20em;
+    max-width: 30em;
+    height:auto;
+    position: absolute;
+    right:0;
+    bottom:0;
 }
 
 .caption{
@@ -184,6 +200,7 @@ nav {
     color: #0A152F;
 }
 
+/*|Secondary Page Setups*/
 .gsetup{
     display: grid;
     grid-template-columns: 1fr;
@@ -199,32 +216,28 @@ nav {
   width: 100%;
 }
 
-.col img{
-    height:auto;
-    position: absolute;
-    right:0;
-    bottom:0;
-}
-
+/*|||Computer Styling|||*/
 @media only screen and (min-width:750px){
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 20px;
-    }
+    /*|Nav Styling|*/
     #navbarlinks {
         top:0;
-        display: inline-block;
+        float:right;
+        margin-right: 20px;
     }
-       
     #navbarlinks li {
+        display: inline-block;
         margin: 0 5px;
-        margin-right: 60px;
         transition: none;
         background: none;
     }
     .checkbtn {
         display: none;
+    }
+    /*|Index|*/
+      .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
     }
     .container{
         height: 400px;
@@ -233,9 +246,10 @@ nav {
         display:flex;
     }
     .col{
-        height: 100%;
+        height: 30em;
         flex:1;
     }
+    /*|Secondary|*/
     .gsetup {
         grid-template-columns: 1fr 1fr 1fr;
         width: 100%;
