--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ nav {
     top: 0;
     width: 100%;
     height: 50px;
-    z-index:3;
+    z-index:100;
 }
 
 #navbarlinks {
@@ -184,7 +184,7 @@ nav {
 .col h3{
     text-align: center;
 }
-.col img {
+.indeximg {
     max-width: 30em;
     height:auto;
     position: absolute;
@@ -192,11 +192,14 @@ nav {
     bottom:0;
 }
 
+
 .caption{
     font-weight: 400;
+    position: relative;
     font-size: 14px;
     line-height: 16px;
     color: #0A152F;
+    z-index: 90;
 }
 
 /*|Secondary Page Setups*/
@@ -235,8 +238,13 @@ nav {
         background-color: transparent;
         text-align: right;
         transition: none;
+        width:75%;
+        height:50px;
     }
-    
+
+.logo {
+    z-index:300000000;
+}
     /*|Index|*/
       .grid {
         display: grid;
