--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ nav {
     padding: 7px 13px;
     text-transform: uppercase;
 }
+
 #navbarlinks a:hover{
     color: #F3B167;
 }
@@ -138,6 +139,7 @@ nav {
 .logo {
     padding: 0 20px;
 }
+
 .checkbtn {
     font-size: 40px;
     color: #FEE0C4;
@@ -146,6 +148,7 @@ nav {
     display:block;
     cursor:pointer;
 }
+
 #check {
     display:none;
 }
@@ -192,7 +195,6 @@ nav {
     bottom:0;
 }
 
-
 .caption{
     font-weight: 400;
     position: relative;
@@ -209,13 +211,33 @@ nav {
     width: 100%;
 }
 .gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
+    margin: 2px;
+    border: none;
   }
-.gcolor {
-  background: rgba (0, 255, 0, 0.5);
-  z-index: 2;
-  width: 100%;
+
+.cimg{
+    text-align: center;
+    position: relative;
+}
+
+/*before for styling?
+more info on ":before" : https://developer.mozilla.org/en-US/docs/Web/CSS/::before 
+how I did the overlay of color: https://stackoverflow.com/questions/44673676/how-to-add-color-overlay-on-an-image */
+.cimg:before{
+    content:"";
+    position: absolute;
+    height:470px;
+    width:470px;
+    background: rgba(243,177,103,0.8);
+    z-index:80;
+}
+
+#gimg {
+    width: 470px;
+}
+
+.desc {
+    display: none;
 }
 
 /*|||Computer Styling|||*/
@@ -264,6 +286,15 @@ nav {
     /*|Secondary|*/
     .gsetup {
         grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
         width: 100%;
+    }
+    #gimg {
+        width: 420px;
+    }
+
+    .cimg:before{
+        height:420px;
+        width:420px;
     }
 }
