--- a/css/styles.css
+++ b/css/styles.css
@@ -336,3 +336,32 @@ extra vid on overlaying color and text: https://www.youtube.com/watch?v=exb2ab72
         opacity: 1;
     }
 }
+
+
+
+/* assignment 8 */
+
+.randomize {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        color: #FFFFFF;
+        background-color: #0A152F;
+        border: none;
+        border-radius: 15px;   
+        padding: 10px 25px; 
+        text-decoration: none;
+    }
+    
+    .randomize:hover {
+        background: #F3B167;
+    }
+
+
+    .story {
+        background: #F3B167;
+        color: #0A152F;
+        padding: 10px;
+        visibility: hidden;
+      }
