--- a/Assignments/A11QuoteMachine/a11.css
+++ b/Assignments/A11QuoteMachine/a11.css
@@ -112,7 +112,7 @@ html {
   
   .explanation {
     position: absolute;
-    top: 95%;
+    bottom: 0%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 600px;
