--- a/Assignments/A11QuoteMachine/a11.css
+++ b/Assignments/A11QuoteMachine/a11.css
@@ -20,7 +20,8 @@ html {
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
-    color: #F3B167;
+    color: #0A152F;
+    padding: 10px;
   }
   
   .app {
@@ -110,15 +111,6 @@ html {
     grid-template-rows: 1fr 1fr;
   }
   
-  .explanation {
-    position: absolute;
-    bottom: 0%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    border-radius: 5px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  }
   
   @media screen and (max-width: 600px) {
     .app {
