--- a/Assignments/A12BadlyDesignedForm/a12.css
+++ b/Assignments/A12BadlyDesignedForm/a12.css
@@ -1,7 +1,33 @@
+*{
+    box-sizing: border-box; /*padding is part of the width of the box*/
+    font-family: Ubuntu;
+}
 .topform {
     padding: 20px;
     background-color: orange;
     border-radius: 5px;
     border: 1px solid red;
     max-width: 350px;
+}
+
+/*https://www.youtube.com/watch?v=Ki0XXrlKlHY*/
+.circle {
+    width: 300px;
+    height: 300px;
+    background-color: #d7d7d7;
+    border-radius: 50%; /*makes square become circle*/
+    position: relative;
+}
+
+.circle .number {
+    --rotation: 0; /*default value*/
+    position: absolute;
+    width: 100%;
+    height:100%;
+    text-align: center;
+    transform: rotate(var(--rotation));  /*created a variable called rotation*/
+}
+
+.clock .number2 {
+    --rotation: 30deg;
 }
