--- a/Assignments/A12BadlyDesignedForm/a12.css
+++ b/Assignments/A12BadlyDesignedForm/a12.css
@@ -19,6 +19,7 @@ em {
 #mainbox{
     width:350px;
     height: 300px;
+    position: relative;
 }
 
 .circle {
@@ -75,13 +76,12 @@ em {
 #hand {
     --rotation: 0;
     position: absolute;
-    width: 10px;
-    height:10%;
-    top: -10%;
-    left: 50%;
-    text-align: center;
+    width: 10%;
+    height:1%;
+    top: 50%;
+    right: 0%;
     background-color: rgb(255, 0, 255, 0.7);
-    z-index:10;
+    z-index:60;
     transform-origin: bottom; /*the rotation occurs at the bottom*/
     transform: translateX(-50%) rotate(calc(var(--rotation)* 1deg)); /*moves the position left by half of its width*/
 }
