--- a/Assignments/A12BadlyDesignedForm/a12.css
+++ b/Assignments/A12BadlyDesignedForm/a12.css
@@ -91,3 +91,8 @@ em {
     border-radius: 50%;
     transform: translateX(-50%) translateY(50%);
 }
+
+.output {
+    font-weight: 500;
+    font-size: 24px;
+}
