--- a/Assignments/A12BadlyDesignedForm/a12.css
+++ b/Assignments/A12BadlyDesignedForm/a12.css
@@ -4,10 +4,18 @@
 }
 .topform {
     padding: 20px;
-    background-color: orange;
+    background-color: rgb(255, 250, 245);
     border-radius: 5px;
-    border: 1px solid red;
+    border: 1px solid gray;
     max-width: 400px;
+    line-height: 25px;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 55px;
+    color: #0A152F;
 }
 
 em {
@@ -23,6 +31,7 @@ em {
 }
 
 .circle {
+    margin-top: 40px;
     width: 300px;
     height: 300px;
     background-color: #d7d7d7;
@@ -31,11 +40,9 @@ em {
 }
 
 #spinner {
-    transition: all ease 5s;
+    transition: all ease 3s;
 }
-.correct-button {
-    margin-top: 20px;
-}
+
 
 .circle .number {
     font-size:18px;
@@ -80,14 +87,44 @@ em {
     transform: translateX(-50%); /*moves the position left by half of its width*/
 }
 
+.billing-button, .correct-button {
+    margin-top: 5px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: #0A152F;
+    border: none;
+    border-radius: 15px;   
+    padding: 10px 25px; 
+    text-decoration: none;
+}
+
+.correct-button {
+    margin-top: 20px;
+    margin-left: 80px;
+}
+
+.billing-button:hover, .correct-button:hover, .spin-button:hover {
+    background: #F3B167;
+}
+
+.correct-button:disabled, .spin-button:disabled {
+    background:gray;
+}
+
 .spin-button {
+    font-weight: 700;
+    font-size: 24px;
     position: absolute;
     background-color: red;
+    border-color: white;
     bottom:50%;
     left: 50%;
     z-index:20;
-    height: 40px;
-    width: 40px;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
     transform: translateX(-50%) translateY(50%);
 }
@@ -95,4 +132,9 @@ em {
 .output {
     font-weight: 500;
     font-size: 24px;
+}
+
+.myName {
+    margin-top: 50px;
+    font-size: 12px;
 }
