--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
     font-family: 'Ubuntu';
     font-style: normal;
+    box-sizing: border-box; /*solved the problem of horizontal scrolling*/
 }
 
 
@@ -207,6 +208,10 @@ nav {
 }
 
 /*|Secondary Page Setups*/
+.centergrid {
+    display: grid;
+    grid-template-columns: 1fr 1270px 1fr;
+}
 .gsetup{
     display: grid;
     grid-template-columns: 470px;
